Fixes for Timer\Alarm function

--- a/Ark Ascended Tools/Ark Ascended Tools.vcxproj
+++ b/Ark Ascended Tools/Ark Ascended Tools.vcxproj
@@ -181,6 +181,9 @@
     <Image Include="ColorID.bmp" />
     <Image Include="small.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <Media Include="alarm.wav" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
