New Auto Dropper and Menu Transition Detection

--- a/Ark Ascended Tools/Ark Ascended Tools.vcxproj.filters
+++ b/Ark Ascended Tools/Ark Ascended Tools.vcxproj.filters
@@ -92,6 +92,9 @@
     <ClCompile Include="Coordinates.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="AutoDropper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Ark Ascended Tools.rc">
