--- a/Ark Ascended Tools/Ark Ascended Tools.vcxproj
+++ b/Ark Ascended Tools/Ark Ascended Tools.vcxproj
@@ -153,6 +153,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Ark Ascended Tools.cpp" />
+    <ClCompile Include="AutoDropper.cpp" />
     <ClCompile Include="AutoJoiner.cpp" />
     <ClCompile Include="AutoWalk.cpp" />
     <ClCompile Include="BackupJoiner.cpp" />
