--- a/Ark Ascended Tools/Ark Ascended Tools.vcxproj
+++ b/Ark Ascended Tools/Ark Ascended Tools.vcxproj
@@ -171,6 +171,7 @@
     <ClCompile Include="AutoFarmer.cpp" />
     <ClCompile Include="SoloNanny.cpp" />
     <ClCompile Include="Timer.cpp" />
+    <ClCompile Include="Troubleshoot.cpp" />
     <ClCompile Include="Update.cpp" />
     <ClCompile Include="UserGuide.cpp" />
   </ItemGroup>
