--- a/Ark Ascended Tools/Ark Ascended Tools.vcxproj
+++ b/Ark Ascended Tools/Ark Ascended Tools.vcxproj
@@ -127,7 +127,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <LanguageStandard>stdcpp14</LanguageStandard>
       <DebugInformationFormat>None</DebugInformationFormat>
@@ -143,56 +143,57 @@
     <ClInclude Include="..\..\..\..\..\..\..\..\Program Files (x86)\Windows Kits\10\Include\10.0.22621.0\um\CommCtrl.h" />
     <ClInclude Include="..\..\..\..\..\..\..\..\Program Files (x86)\Windows Kits\10\Include\10.0.22621.0\um\ShObjIdl.h" />
     <ClInclude Include="..\..\..\..\..\..\..\..\Program Files (x86)\Windows Kits\10\Include\10.0.22621.0\um\WinUser.h" />
-    <ClInclude Include="Coordinates.h" />
-    <ClInclude Include="Features.h" />
-    <ClInclude Include="framework.h" />
-    <ClInclude Include="pch.h" />
-    <ClInclude Include="Resource.h" />
-    <ClInclude Include="targetver.h" />
+    <ClInclude Include="Headers\Coordinates.h" />
+    <ClInclude Include="Headers\Features.h" />
+    <ClInclude Include="Headers\framework.h" />
+    <ClInclude Include="Headers\Menus.h" />
+    <ClInclude Include="Headers\resource.h" />
+    <ClInclude Include="Headers\targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Ark Ascended Tools.cpp" />
-    <ClCompile Include="AutoClick.cpp" />
-    <ClCompile Include="AutoDropper.cpp" />
-    <ClCompile Include="AutoFish.cpp" />
-    <ClCompile Include="AutoGrabber.cpp" />
-    <ClCompile Include="AutoJoiner.cpp" />
-    <ClCompile Include="AutoWalk.cpp" />
-    <ClCompile Include="BackupJoiner.cpp" />
-    <ClCompile Include="AntiAFK.cpp" />
-    <ClCompile Include="Changelog.cpp" />
-    <ClCompile Include="ClubARK.cpp" />
     <ClCompile Include="Coordinates.cpp" />
-    <ClCompile Include="MagicINI.cpp" />
-    <ClCompile Include="MassBabyFeed.cpp" />
-    <ClCompile Include="pch.cpp">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
-    </ClCompile>
-    <ClCompile Include="AutoFarmer.cpp" />
-    <ClCompile Include="SoloNanny.cpp" />
-    <ClCompile Include="Timer.cpp" />
-    <ClCompile Include="Troubleshoot.cpp" />
-    <ClCompile Include="Update.cpp" />
-    <ClCompile Include="UserGuide.cpp" />
-    <ClCompile Include="XPParty.cpp" />
+    <ClCompile Include="Features\AntiAFK.cpp" />
+    <ClCompile Include="Features\AutoClick.cpp" />
+    <ClCompile Include="Features\AutoDropper.cpp" />
+    <ClCompile Include="Features\AutoFarmer.cpp" />
+    <ClCompile Include="Features\AutoFish.cpp" />
+    <ClCompile Include="Features\DevTools.cpp" />
+    <ClCompile Include="Features\PVPTools.cpp" />
+    <ClCompile Include="Features\AutoGrabber.cpp" />
+    <ClCompile Include="Features\AutoJoiner.cpp" />
+    <ClCompile Include="Features\AutoWalk.cpp" />
+    <ClCompile Include="Features\BackupJoiner.cpp" />
+    <ClCompile Include="Features\ClubARK.cpp" />
+    <ClCompile Include="Features\EggDrop.cpp" />
+    <ClCompile Include="Features\TribelogBot.cpp" />
+    <ClCompile Include="Features\MagicINI.cpp" />
+    <ClCompile Include="Features\MassBabyFeed.cpp" />
+    <ClCompile Include="Features\SoloNanny.cpp" />
+    <ClCompile Include="Features\Timer.cpp" />
+    <ClCompile Include="Features\XPParty.cpp" />
+    <ClCompile Include="Menus\Changelog.cpp" />
+    <ClCompile Include="Menus\Menus.cpp" />
+    <ClCompile Include="Menus\Settings.cpp" />
+    <ClCompile Include="Menus\Troubleshoot.cpp" />
+    <ClCompile Include="Menus\Update.cpp" />
+    <ClCompile Include="Menus\UserGuide.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="Ark Ascended Tools.rc" />
+    <Image Include="Resources\Ark Ascended Tools.ico" />
+    <Image Include="Resources\ColorID.bmp" />
+    <Image Include="Resources\PlayerXP.bmp" />
+    <Image Include="Resources\small.ico" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="Ark Ascended Tools.ico" />
-    <Image Include="ColorID.bmp" />
-    <Image Include="small.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <Media Include="alarm.wav" />
+    <Media Include="Resources\alarm.wav" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Changelog.txt" />
     <Text Include="Version.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Resources\Ark Ascended Tools.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
